<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_account_change_phone_bg"
    android:orientation="vertical">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_ctv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/user_account_calce"
        app:titleColor="@color/black_333333"
        app:titleSize="@dimen/text_size_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_ffffff"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/user_accout_cacle_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/user_account_calce_face_error"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="6dp"
            android:text="@string/user_account_calce_face_error_himt"
            android:textColor="@color/gray_999999"
            android:textSize="@dimen/text_size_13" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_activity_accout_calce_retry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@id/face_activity_face_check_fail_hint"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/face_check_btn_fail"
        android:gravity="center"
        android:text="@string/user_retry"
        android:textColor="@color/face_check_btn_text"
        android:textSize="@dimen/text_size_17" />

    <TextView
        android:id="@+id/text_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/user_back"
        android:textColor="@color/pasc_primary"
        android:textSize="@dimen/text_size_17" />


</LinearLayout>
