<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff"
    android:orientation="vertical">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_ctv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/user_account_calce"
        app:titleColor="@color/black_333333"
        app:titleSize="@dimen/text_size_18" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@drawable/user_accout_cacle_error" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/user_account_calce_error"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:text="@string/user_account_calce_reason"
        android:textColor="@color/gray_999999"
        android:textSize="@dimen/text_size_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="39dp"
        android:background="@color/gray_dddddd"></View>

    <RelativeLayout
        android:id="@+id/rl_calce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:text="@string/user_account_calce_pay_error"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="2dp"
            android:text="@string/user_account_calce_pay_error_himt"
            android:textColor="@color/gray_999999"
            android:textSize="@dimen/text_size_13" />

        <ImageView
            android:id="@+id/user_iv_cert_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/user_ic_arrow_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_dddddd"></View>

</LinearLayout>
