<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:title="@string/user_account_certification" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_15"
        android:text="@string/user_account_certification_hint"
        android:textSize="@dimen/text_size_13"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginBottom="@dimen/dp_10"
        android:textColor="@color/gray_999999"
        />

    <com.pasc.lib.widget.ClearEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white_ffffff"
        android:cursorVisible="true"
        android:hint="@string/user_real_name_hint"
        android:inputType="textPersonName"
        android:maxLength="18"
        android:paddingStart="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:textColor="@color/black_2e332f"
        android:textColorHint="@color/gray_c7c7c7"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_dddddd" />


    <com.pasc.lib.userbase.base.view.FormatEditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white_ffffff"
        android:cursorVisible="true"
        android:hint="@string/user_id_hint"
        android:maxLength="22"
        android:paddingStart="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:textColor="@color/black_2e332f"
        android:textColorHint="@color/gray_c7c7c7"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_dddddd" />


    <Button
        android:id="@+id/btn_next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="30dp"
        android:alpha="0.3"
        android:background="@drawable/userbase_button_bg"
        android:enabled="false"
        android:gravity="center"
        android:text="下一步"
        android:textColor="@color/white_ffffff" />
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/user_face_hint"
        android:layout_marginTop="@dimen/dp_24"
        android:textColor="@color/gray_999999"
        android:textSize="@dimen/text_size_13"
        />

</LinearLayout>
