<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff"
    android:orientation="vertical">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_ctv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/user_account_calce"
        app:titleColor="@color/black_333333"
        app:titleSize="@dimen/text_size_18" />
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"></WebView>

    <LinearLayout
        android:id="@+id/pasc_user_privacy_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pasc_user_privacy_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/dp_5"
            android:src="@drawable/single_unselect" />

        <TextView
            android:id="@+id/pasc_user_privacy_pre_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_account_calce_himt"
            android:textColor="@color/gray_999999"
            android:textSize="@dimen/user_text_size_13" />

    </LinearLayout>

    <Button
        android:id="@+id/user_accout_sure"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/userbase_button_bg"
        android:text="@string/user_account_calce_commit"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/text_size_17" />

    <TextView
        android:id="@+id/user_accout_calce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/user_account_calce_calce"
        android:layout_marginBottom="30dp"
        android:textColor="@color/gray_999999"

        android:textSize="@dimen/user_text_size_17" />
</LinearLayout>
