<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_account_change_phone_bg"
    android:orientation="vertical">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_ctv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/user_new_phone_title"
        app:titleColor="@color/black_333333"
        app:titleSize="@dimen/text_size_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/user_new_phone_hint"
        android:textColor="@color/gray_999999"
        android:textSize="@dimen/text_size_13" />



        <com.pasc.lib.userbase.base.view.FormatEditText
            android:id="@+id/user_et_user_phone_num"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_edit_height"
            android:background="@color/white_ffffff"
            android:drawablePadding="@dimen/user_margin_12"
            android:hint="@string/user_input_phone_number_hint"
            android:inputType="phone"
            android:maxLength="13"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:text=""
            android:textColor="@color/black_2e332f"
            android:textColorHint="@color/gray_c7c7c7"
            android:textCursorDrawable="@drawable/login_et_cursor"
            android:textSize="@dimen/user_text_size_16" />


    <Button
        android:id="@+id/user_new_phone_next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="30dp"
        android:background="@drawable/userbase_button_bg"
        android:text="@string/user_change_phone_next"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/text_size_17" />


</LinearLayout>
