<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff"
    android:orientation="vertical">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_ctv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/user_change_phone_title"
        app:titleColor="@color/black_333333"
        app:titleSize="@dimen/text_size_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="17dp"
        android:text="@string/user_change_phone_input_himt"
        android:textColor="@color/gray_999999"
        android:textSize="@dimen/text_size_13" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@color/white_ffffff"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_phone_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="182"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/text_size_20" />
        <com.pasc.business.user.view.VerificationCodeEditText
            android:id="@+id/edit_VerificationCodeEditText"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            app:user_codeTextColor="@color/black_333333"
            app:user_codeTextSize="8sp"
            app:user_codeTextBackgroud="@drawable/bg_border_bottom_gold"
            app:user_codeCursorImg="@drawable/guangbiao"
            app:user_codeCursorHeight="25dp">


        </com.pasc.business.user.view.VerificationCodeEditText>
        <TextView
            android:id="@+id/tv_phone_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="3456"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>



    <Button
        android:id="@+id/user_commit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="45dp"
        android:background="@drawable/userbase_button_bg"
        android:text="@string/user_change_phone_btm"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/text_size_17" />


</LinearLayout>
